# project_cli_jira

./: Cargo.toml  Readme.md  db1.json  db2.json  db4.json
data/: jira.db
src/: db.rs  io_utils.rs  main.rs  models.rs  temp.rs  temp.txt  utility.rs
src/ui/: mod.rs  prompts.rs
src/ui/pages/: mod.rs  page_helpers.rs
