[package]
name = "project_cli_jira"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clearscreen = "4.0.2"
ellipse = "0.2.0"
itertools = "0.14.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.21.0"
